==> nopnop2002/esp-idf-rc-switch/components/RCSwitch/RCSwitch.c <==
#include <stdio.h>
#include <inttypes.h>
#include <string.h>
#include "freertos/FreeRTOS.h"
#include "freertos/task.h"
#include "esp_system.h"
#include "esp_log.h"
#include "driver/gpio.h"
#include "esp_timer.h" // for esp-idf v5
#include "RCSwitch.h"

void enableTransmit(RCSWITCH_t * RCSwitch, int nTransmitterPin) {
	RCSwitch->nTransmitterPin = nTransmitterPin;
	//pinMode(this->nTransmitterPin, OUTPUT);
	//gpio_pad_select_gpio( RCSwitch->nTransmitterPin );
	gpio_reset_pin( RCSwitch->nTransmitterPin );
	gpio_set_direction( RCSwitch->nTransmitterPin, GPIO_MODE_OUTPUT );
}

esp_err_t enableReceive(RCSWITCH_t * RCSwitch, int interrupt) {
	RCSwitch->nReceiverInterrupt = interrupt;
	return (enableReceiveInternal(RCSwitch));
}

void disableReceive(RCSWITCH_t * RCSwitch) {
	//detachInterrupt(this->nReceiverInterrupt);
	//gpio_isr_handler_remove(GPIO_NUM_22);
	gpio_isr_handler_remove(RCSwitch->nReceiverInterrupt); // nReceiverInterrupt is GPIO
	RCSwitch->nReceiverInterrupt = -1;
}
